[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://game/pause_menu/pause_menu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -300.0
margin_right = 108.0
margin_bottom = 300.0
custom_constants/separation = 20
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 216.0
margin_bottom = 262.0
text = "Continue"

[node name="RestartLevel" type="Button" parent="VBoxContainer"]
margin_top = 282.0
margin_right = 216.0
margin_bottom = 318.0
text = "Restart Level"

[node name="ExitToMenu" type="Button" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 216.0
margin_bottom = 374.0
text = "Exit to Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
